Updated for Assignment 3

--- a/assignment2.html
+++ b/assignment2.html
@@ -19,11 +19,11 @@
         </div>
     </div>
     <div class="function-text">
-        <h1>Convert Celsius to Fahrenheit</h1> 
-        <button onclick="convertTemp()">Convert Celsius to Fahrenheit</button>
+        <h1>Convert Any Temperature</h1> 
+        <button onclick="convertTemp()">Convert Your Temperature Here</button>
     </div>
     <div id="answer-box" class="answer-box" contenteditable></div>
 
-    <script src="scripts/assignment2.js"></script>
+    <script src="scripts/assignment3.js"></script>
 </body>
 </html>
