Working on Final Report

--- a/final.html
+++ b/final.html
@@ -20,10 +20,10 @@
     </div>
     <div class="function-text">
         <h1>Convert Any Temperature</h1> 
-        <button onclick="convertTemp()">Convert Your Temperature Here</button>
+        <button onclick="convertTemperatureRange()">Convert Your Temperature Here</button>
     </div>
     <div id="answer-box" class="answer-box" contenteditable></div>
     <!--<script src="scripts/assignment2.js"></script>-->
-    <script src="scripts/assignment3.js"></script>
+    <script src="scripts/final.js"></script>
 </body>
 </html>
